# workflow-os

./: .gitignore  ARCHITECTURE.md  DEMO_WALKTHROUGH.md  FINAL_SUMMARY.md  PENDING.txt  PROGRESS.md  README.md  docker-compose.yml  pyproject.toml  workflowos-steps.txt
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  __init__.py  audit.py  cache.py  db.py  feedback.py  m365.py  main.py  middleware.py  requirements.txt  startup.sh  utils.py  validation.py  webhooks.py
backend/agents/: assignment.py  extraction.py  llm.py  orchestrator.py  reporting.py  risk.py  validator.py
backend/schemas/: models.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentFeed.tsx  DependencyGraph.tsx  ExecutionDashboard.tsx  Footer.tsx  Header.tsx  Toast.tsx  TranscriptInput.tsx
frontend/hooks/: useKeyboardShortcuts.ts  useSSE.ts
frontend/lib/: data.ts  types.ts
frontend/public/: manifest.json
infra/: main.bicep
infra/modules/: acr.bicep  container-apps.bicep  cosmos.bicep  servicebus.bicep
tests/: conftest.py  test_db.py  test_schemas.py  test_validator.py
