[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "workflowos-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "openai==1.12.0",
    "httpx==0.26.0",
    "python-multipart==0.0.6",
    "azure-cosmos==4.7.0",
    "redis==5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".."]
asyncio_mode = "auto"
